# caption-forge

./: README.en.md  README.md  README.ru.md  pyproject.toml
src/caption_forge/: caption_forge.py
src/caption_forge/internal/: text_color.py
src/captionforge/: __init__.py  caption_forge.py
src/captionforge/internal/: text_color.py
