[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "captionforge"
version = "1.0.0"
description = "Automatically overlay perfectly fitted text on image"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
