[project]
name = "caption-forge"
version = "1.1.1"
description = "Automatically overlay perfectly fitted text on image"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pillow>=11.2.1"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
